--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="main-grid grid">
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (1).jpg" alt="">
+          <div class="pro"> <img src="prod (1).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -62,7 +62,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (2).jpg" alt="">
+          <div class="pro"> <img src="prod (2).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -73,7 +73,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (3).jpg" alt="">
+          <div class="pro"> <img src="prod (3).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -84,7 +84,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (4).jpg" alt="">
+          <div class="pro"> <img src="prod (4).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -95,7 +95,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (6).jpg" alt="">
+          <div class="pro"> <img src="prod (6).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -106,7 +106,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod(7).jpg" alt="">
+          <div class="pro"> <img src="prod(7).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -117,7 +117,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (5).jpg" alt="">
+          <div class="pro"> <img src="prod (5).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -128,7 +128,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (1).jpg" alt="">
+          <div class="pro"> <img src="prod (1).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -139,7 +139,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (1).jpg" alt="">
+          <div class="pro"> <img src="prod (1).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -150,7 +150,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (1).jpg" alt="">
+          <div class="pro"> <img src="prod (1).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
