--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://kit.fontawesome.com/2fff14569d.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="favi.png" type="image/x-icon">
     <title>Khadidja Store</title>
 </head>
@@ -176,8 +175,6 @@
         </ul>
     </div>
   </footer>
-
-    <script src="index.js"></script>
 </body>
 
 </html>
