--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  <section class="top-nav">
     <p>للاتصال : 06.72.78.70.86</p>
  </section>
+     <div class="pagecount"><a href="https://info.flagcounter.com/wBgi"><img src="https://s11.flagcounter.com/count/wBgi/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_4/viewers_0/labels_0/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></div>
  <section class="b-nav">
     <nav class="navbar">
         <div class="logo">
