--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="main-grid grid">
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (1).jpg" alt="">
+          <div class="pro"> <img src="prod (1).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -56,7 +56,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (2).jpg" alt="">
+          <div class="pro"> <img src="prod (2).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -67,7 +67,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (3).jpg" alt="">
+          <div class="pro"> <img src="prod (3).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -78,7 +78,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (4).jpg" alt="">
+          <div class="pro"> <img src="prod (4).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -89,7 +89,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (6).jpg" alt="">
+          <div class="pro"> <img src="prod (6).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -100,7 +100,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod(7).jpg" alt="">
+          <div class="pro"> <img src="prod(7).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -111,7 +111,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (5).jpg" alt="">
+          <div class="pro"> <img src="prod (5).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -122,7 +122,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (1).jpg" alt="">
+          <div class="pro"> <img src="prod (1).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -133,7 +133,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (1).jpg" alt="">
+          <div class="pro"> <img src="prod (1).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
@@ -144,7 +144,7 @@
       </div>
       <div class="card">
         <a href="#">
-          <div class="pro"> <img src="img/prod (1).jpg" alt="">
+          <div class="pro"> <img src="prod (1).jpg" alt="">
           </div>
           <article>
             <p>منتوج جديد</p>
